# smile

./: .clang-format  .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENCE  README.md
.cache/clangd/index/: ParticleSystem.c.17774A4AC3E6F44A.idx  ParticleSystem.c.67D5E120015F68E0.idx  ParticleSystem.c.C056C5441A2B8F5B.idx  ParticleSystem.h.6359EF39CF1C7163.idx  ParticleSystem.h.AEF591FAF260C3CD.idx  SM_Error.h.416478D094579D12.idx  Smile.c.376B1D2E428727F1.idx  Smile.h.B9C035192F3FB933.idx  StateMachine.c.BF41DEFD332D43D7.idx  StateMachine.c.FB290406AA69EC90.idx  StateMachine.h.B3C400AF34940480.idx  StateMachine.h.E27F62A2A4032C46.idx  StateMachineInternal.h.D975F3D894B40A7E.idx  StateMachineTest.h.B32D3EE7555E7642.idx  StateMachineTestAccess.h.4F32B0C4F91569CB.idx  StateMachineTestAccess.h.D3212C356D6C8182.idx  TestParticleSystem.c.626AE618AA255418.idx  TestParticleSystem.c.7E0DA63287D40A68.idx  TestSmile.c.14238118070B6DA8.idx  TestStateMachine.c.21C2147CC7E59CDD.idx  TestStateMachine.c.60F6565667F1C7AC.idx  Test_SM.c.09128817956E54AE.idx  smile.c.F5050D0A4B99B39A.idx  smile.h.98DC0E8AD6673699.idx  stb_ds.h.EAF404B9187D151F.idx  test_particle_system.c.048E957247EBE89D.idx  test_smile.c.FA53C9506A40C841.idx  test_state_machine.c.37448EF8AF9F660A.idx  uthash.h.949A64EBB7DD8EC3.idx
.github/workflows/: ci.yml
ParticleSystem/: ParticleSystem.c  ParticleSystem.h
ParticleSystem/usage/: main.c
StateMachine/: SM_Error.h  StateMachine.c  StateMachine.h  StateMachineInternal.h  StateMachineTestAccess.h
StateMachine/examples/state_example/: StateExample.c  StateExample.h  state_example.h
StateMachine/examples/usage/: StateOne.c  StateOne.h  StateTwo.c  StateTwo.h  main.c
build-strict/: CMakeCache.txt  build.ninja  compile_commands.json
build_ci_check/: .ninja_deps  .ninja_log  CMakeCache.txt  SceneManagerAPITest  build.ninja  compile_commands.json
docs/: CONTRIBUTING.md  CONVENTIONS.md  Contributing.md  particlesystem.md  statemachine.md
docs/Log/: LOG_API.md  LogAPI.md  Log_API.md  README.md
docs/ParticleSystem/: PS_GettingStarted.md
docs/SceneManager/: README.md  SceneManagerAPI.md
docs/StateMachine/: README.md  SM_API.md  SM_GettingStarted.md  StateMachineAPI.md  StateMachine_API.md  StateMachine_GettingStarted.md
docs/_Contributing/: Contributing.md
docs/_Internal/: CommonInternalAPI.md  LogInternalAPI.md  SceneManagerInternalAPI.md  TestInternalAPI.md
docs/_Internal/Assets/__FileTemplates/: ModuleTemplateMessages.h  Template.h  TemplateInternal.h  ToolTemplateMessages.h
docs/_Internal/Internal/: TestInternal_API.md
docs/_Internal/Log/: LogInternalAPI.md  LogInternal_API.md
docs/_Internal/LogInternal/: LogInternal_API.md
docs/_Internal/SceneManager/: SceneManagerInternalAPI.md
docs/_Internal/Test/: TEST_API.md  TestInternalAPI.md  TestInternal_API.md
docs/_Internal/TestInternal/: TestInternal_API.md
docs/_Internal/_Common/: CommonInternalAPI.md
docs/_Internal/_Contributing/: 0_Developer_Setup.md  0_Setup.md  1_Coding_Guidelines.md  1_The_Structure_Of_Smile.md  1_Understanding_Smile.md  2.1_Coding_Guidelines_Code_Organization.md  2.2_Coding_Guidelines_General_Conventions.md  2_Coding_Guidelines.md  2_Documenting.md
docs/internal/: CommonAPI.md  CommonInternalAPI.md  LogInternalAPI.md  SceneManagerInternalAPI.md  TestAPI.md  TestInternalAPI.md
docs/internal/Assets/__FileTemplates/: Template.c  (+3 more)
docs/tools/: GenScene.md  README.md
examples/state_example/: state_example.c  state_example.h
examples/usage/: main.c  state_one.c  state_one.h  state_two.c  state_two.h
include/: Log.h  ParticleSystem.h  SaveLoad.h  SaveLoadSystem.h  SceneManager.h  StateMachine.h  smile.h
src/: ParticleSystem.c  smile.c
src/Log/: Log.c  LogInternal.h
src/ParticleSystem/: ParticleSystem.c
src/SaveLoad/: SaveLoad.c  SaveLoadInternal.h  SaveLoadMessages.h
src/SaveLoadSystem/: SaveLoadSystem.c  SaveLoadSystemInternal.h  SaveLoadSystemMessages.h
src/SceneManager/: SceneManager.c  SceneManagerInternal.h  SceneManagerMessages.h  SceneManagerTestHooks.h
src/SceneManager/SceneTemplates/: SceneExample.c  SceneExample.h
src/SceneManager/StateTemplates/: StateExample.c  StateExample.h
src/SceneManager/tools/: GenScene.c
src/StateMachine/: StateMachine.c  StateMachineInternal.h  StateMachineMessages.h
src/StateMachine/StateTemplates/: StateExample.c  StateExample.h
src/_Internal/Common/: CommonInternalMessages.h
src/_Internal/Log/: Log.c  LogInternal.h  LogMessages.h
src/_Internal/Test/: TestInternal.c  TestInternal.h
src/_Internal/TestInternal/: TestInternal.c  TestInternal.h
src/_Internal/_Common/: Common.c  CommonInternal.c  CommonInternal.h  CommonInternalMessages.h  CommonMessages.h
src/_Internals/Log/: Log.c  Log.h  LogInternal.h  LogMessages.h
src/_Internals/Test/: TestInternal.c  TestInternal.h
src/internal/Common/: Common.c  Common.h  CommonInternal.c  CommonInternal.h  CommonInternalMessages.h  CommonMessages.h
src/internal/Test/: Test.c  Test.h  TestInternal.h
src/tools/GenScene/: GenScene.c  GenSceneInternal.h  GenSceneMessages.h
test/StateMachine/: StateMachineTest.c  StateMachineTest.h
tests/: GenSceneToolTest.c  Log.c  LogAPITest.c  SceneManager.c  SceneManagerAPITest.c  TestParticleSystem.c  TestSmile.c  TestStateMachine.c  test_smile.c
tests/Log/: LogAPITest.c  LogTest.c
tests/ParticleSystem/: test_particle_system.c
tests/SaveLoad/: SaveLoadAPITests.c  SaveLoadAPITests.h  SaveLoadInternalTest.c  SaveLoadInternalTest.h  SaveLoadTest.c  SaveLoadTest.h
tests/SceneManager/: SceneManagerAPITest.c  SceneManagerAPITest.h
tests/StateMachine/: StateMachineAPITest.c  StateMachineAPITest.h  StateMachineAPITests.c  StateMachineAPITests.h  StateMachineApiTests.h  StateMachineInternalTest.c  StateMachineInternalTest.h  StateMachineTest.c  StateMachineTest.h  StateMachineTestAccess.h  TestStateMachine.c  Test_SM.c  Test_SM_TODO.md  test_state_machine.c
tests/tools/: GenScene.c
tools/GenScene/: GenScene.c  GenSceneInternal.h  GenSceneMessages.h
tools/StateMachine/: StateMachineTools.c
(+17 files in other folders)
